--- a/Docker/2/dockerfile
+++ b/Docker/2/dockerfile
@@ -12,5 +12,5 @@ LABEL description="Wevserver"
 VOLUME /var/www/html/
 EXPOSE 80
 
-# ENTRYPOINT [ "/usr/sbin/apachectl" ]
+ENTRYPOINT [ "/usr/sbin/apachectl" ]
 CMD ["-D","FOREGROUND"]
